# TRT2021

./: CMakeLists.txt  PanopticFCN-R50-400-3x-FAST-nodeform.yaml  Readme.md  appOnnxPanopticFCN.cpp  appOnnxPanopticFCN.py  appPanopticFCNPlugin.cpp  build_trt.sh  export_onnx.py
include/: TrtLite.h  Utils.h
panopticfcn/: config.py  head.py  onnx_patch.py  panoptic_seg.py  utils.py
plugins/: SeafoodPlugin.cu  SeafoodPlugin.h
tools/: build_int8_engine.py  calibrator.py  netron_pansonicfcn.py  pansonicFPNTrain.py  trt_lite.py
